--- a/scss/blocks/_advantages.scss
+++ b/scss/blocks/_advantages.scss
@@ -86,6 +86,7 @@
     margin: 0 0 12px 0;
     font-size: 24px;
     line-height: 28px;
+    text-align: center;
 
     @include vp-1023 {
       font-size: 18px;
