--- a/scss/blocks/_card-advantages.scss
+++ b/scss/blocks/_card-advantages.scss
@@ -58,7 +58,7 @@
 
     .card-advantages__content {
       @include vp-1023 {
-        padding: 0;
+        padding: 30px 30px 30px 0;
       }
 
       @include vp-767 {
@@ -118,6 +118,7 @@
 
   &__picture {
     flex-shrink: 0;
+    margin: auto 0 0 0;
   }
 
   &__image {
