--- a/scss/blocks/_hero.scss
+++ b/scss/blocks/_hero.scss
@@ -11,10 +11,6 @@
       @include vp-1023 {
         margin: 0 0 40px 0;
       }
-
-      @include vp-767 {
-        margin: 0;
-      }
     }
 
     .hero__btn {
@@ -41,6 +37,7 @@
 
     @include vp-767 {
       flex-direction: column;
+      position: relative;
     }
   }
 
@@ -56,13 +53,19 @@
 
     @include vp-767 {
       align-items: center;
-      padding: 40px 0 0;
+      padding: 40px 0 276px;
       position: relative;
+      z-index: 10;
     }
   }
 
   &__picture {
     flex-shrink: 0;
+
+    @include vp-767 {
+      position: absolute;
+      bottom: 0;
+    }
   }
 
   &__btn {
@@ -70,12 +73,6 @@
 
     @include vp-1023 {
       width: 244px;
-    }
-
-    @include vp-767 {
-      position: absolute;
-      top: 262px;
-      z-index: 10;
     }
 
     &:hover,
@@ -115,7 +112,6 @@
     }
 
     @include vp-767 {
-      margin: 0;
       text-align: center;
     }
   }
